Add support for java 8